# dev-Cplusplus

./: readme.md
Day1/: CMakeLists.txt  readme.md
Day1/src/: factorial.cpp  main.cpp  squareroot.cpp
Day2/: CMakeLists.txt  readme.md
Day2/client/: CMakeLists.txt  client.cpp
Day2/include/: easywsclient.cpp  easywsclient.hpp
Day2/server/: CMakeLists.txt  server.cpp
